Fixed navbar on mobile

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -8168,6 +8168,9 @@ button.close {
   background-color: #8C2D19;
   color: white; }
 
+html {
+  overflow-x: hidden; }
+
 body {
   font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
@@ -8190,7 +8193,10 @@ body {
     .navbar .navbar-brand img {
       height: 65px; }
   .navbar .collapse.navbar-collapse {
-    background: none !important; }
+    background-color: #8C2D19 !important; }
+    @media (min-width: 768px) {
+      .navbar .collapse.navbar-collapse {
+        background: none !important; } }
 
 #footer .info {
   padding: 0 15px;
