--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -36,7 +36,9 @@ body {
 		}
 	}
 	.collapse.navbar-collapse{
-		background: none !important;
+		@media (min-width: $screen-sm-min) { 
+			background: none !important;
+		}
 	}
 }
 
